--- a/addon/chrome/index.html
+++ b/addon/chrome/index.html
@@ -9,6 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit.js"></script>
+  <script src="test_case_server.js"
   <script src="tests.js"></script>
 </body>
 </html>
