complete the addon test

--- a/addon/chrome/index_test.html
+++ b/addon/chrome/index_test.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="qunit.css">
 	<script src="qunit.js"></script>
 	<script src="test_case_server.js"></script>
-	<script>runServer();</script>
+	<script src="server_tests.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
